syntax = "proto3";

option java_package = 'com.ykotsiuba.bookstore';

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
  int32 quantity = 4;
}

message ReadBookRequest {
  string id = 1;
}

message UpdateBookRequest {
  string id = 1;
  CreateBookRequest book = 2;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  string message = 1;
}

message Empty {}

message BookList {
  repeated Book books = 1;
}


service BookService {
  rpc CreateBook(CreateBookRequest) returns (Book);

  rpc ReadBook(ReadBookRequest) returns (Book);

  rpc ReadALLBooks(Empty) returns (BookList);

  rpc UpdateBook(UpdateBookRequest) returns (Book);

  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
}